Add first version of container details
